trunk/Archive2/68/19f8476d3f5d18/output
main.cpp:1:3: error: invalid preprocessing directive #Include
 # Include <cstdio> 
   ^
main.cpp:8:5: error: stray '\304' in program
     / / locale C bude UTF-8 enabled angličtine; 
     ^
main.cpp:8:5: error: stray '\215' in program
main.cpp:9:5: error: stray '\303' in program
     / / desatinná bodka bude nemčina 
     ^
main.cpp:9:5: error: stray '\241' in program
main.cpp:9:5: error: stray '\304' in program
main.cpp:9:5: error: stray '\215' in program
main.cpp:10:5: error: stray '\303' in program
     / / dátum a čas formátovanie bude
     ^
main.cpp:10:5: error: stray '\241' in program
main.cpp:10:5: error: stray '\304' in program
main.cpp:10:5: error: stray '\215' in program
main.cpp:10:5: error: stray '\303' in program
main.cpp:10:5: error: stray '\241' in program
main.cpp:13:5: error: stray '\304' in program
     std :: time_t t =  std :: čas ( NULL ) ; 
     ^
main.cpp:13:5: error: stray '\215' in program
main.cpp: In function 'int main()':
main.cpp:8:5: error: expected primary-expression before '/' token
     / / locale C bude UTF-8 enabled angličtine; 
     ^
main.cpp:8:7: error: expected primary-expression before '/' token
     / / locale C bude UTF-8 enabled angličtine; 
       ^
main.cpp:8:9: error: 'locale' was not declared in this scope
     / / locale C bude UTF-8 enabled angličtine; 
         ^
main.cpp:8:16: error: expected ';' before 'C'
     / / locale C bude UTF-8 enabled angličtine; 
                ^
main.cpp:9:5: error: expected primary-expression before '/' token
     / / desatinná bodka bude nemčina 
     ^
main.cpp:9:7: error: expected primary-expression before '/' token
     / / desatinná bodka bude nemčina 
       ^
main.cpp:9:9: error: 'desatinn' was not declared in this scope
     / / desatinná bodka bude nemčina 
         ^
main.cpp:9:20: error: expected ';' before 'bodka'
     / / desatinná bodka bude nemčina 
                    ^
main.cpp:13:24: error: 'as' is not a member of 'std'
     std :: time_t t =  std :: čas ( NULL ) ; 
                        ^
main.cpp:14:23: error: 'str' was not declared in this scope
     std :: wcsftime ( str, 100 , L "%% c" , std :: localtime ( & t ) ) ; 
                       ^
main.cpp:14:34: error: 'L' was not declared in this scope
     std :: wcsftime ( str, 100 , L "%% c" , std :: localtime ( & t ) ) ; 
                                  ^
main.cpp:15:24: error: expected ')' before string constant
     std :: wprintf ( L "Číslo:% .2 f \ n Dátum:% ls \ n " , 3.14 , str ) ; 
                        ^
